--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,3 +4,8 @@ astropy >= 2.0.15
 numpy >= 1.16.5
 cthulhu >= 0.2.0
 sphinx==3.3.1
+pandas >= 1.0.1
+mwa_pb >= 1.1.0
+python-casacore >= 3.3.1 
+psutil >= 5.7.0 
+numba >= 0.51.2 
