--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,4 +8,6 @@ pandas >= 1.0.1
 mwa_pb >= 1.1.0
 python-casacore >= 3.3.1 
 psutil >= 5.7.0 
-numba >= 0.51.2 
+numba >= 0.51.2
+astroquery >= 0.4.2
+mwa-hyperbeam == 0.2.0
