--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -9,5 +9,5 @@ mwa_pb >= 1.1.0
 python-casacore >= 3.3.1 
 psutil >= 5.7.0 
 numba >= 0.51.2
-astroquery == 0.4.2.dev0
+astroquery == 0.4.1
 mwa-hyperbeam == 0.2.0
